src/main/java/com/example/sos/employee/error/EmployeeErrorConst.java
package com.example.sos.employee.error;

public interface EmployeeErrorConst {
}
